--- a/style.css
+++ b/style.css
@@ -132,12 +132,21 @@ main {
 
 #outputContainer{
   /* display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; */
-  height: 25%;
+  flex-direction: column;
+  justify-content: center; */
+  /* align-items: center; */
+
+  /* padding: 10px; */
+
+  box-sizing: border-box;
+
+  height: 30%;
   width: 100%;
 
+}
 
-
+#outputContainer > p {
+  line-height: 1.5;
+  margin: 5px;
+  padding: 0;
 }
